--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -13,8 +13,8 @@
     <!-- Used for portlets
     <link href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" rel="stylesheet">
 -->
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/jquery-ui.js"></script>
     <script src="/static/js/bootstrap.js"></script>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
@@ -37,6 +37,11 @@
             display: none;
         }
 
+        .droptrue {
+            min-height: 30px;
+
+        }
+
 
         .connectedSortable {
             list-style-type: none;
@@ -47,9 +52,15 @@
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
             line-height: 20px;
             font-size: small;
-        }
+            min-height: 30;
 
+
+        }
+        .zlist{
+{#            min-height: 100px;#}
+        }
         .ui-state-default {
+            height: 40px;
             margin: 0 5px 5px 5px;
             padding: 5px;
             font-size: 1.2em;
@@ -77,6 +88,19 @@
             margin: 0 5px 5px 5px;
             padding: 5px;
             font-size: 1.2em;
+            width: 120px;
+            background-color: black;
+            text-align: left;
+            vertical-align: top;
+            color: white;
+
+        }
+        .ui-state-highlight2 {
+            visibility: hidden;
+            display: hidden;
+            margin: 0 0px 0px 0px;
+            padding: 0px;
+            font-size: 1em;
             width: 120px;
             background-color: black;
             text-align: left;
@@ -131,19 +155,7 @@
     <link rel="shortcut icon" href="/favicon.ico">
 
     <script>
-        $(function() {
-            $(".connectedSortable" ).sortable({
 
-{#                            $( "#Fall12, #Fall13, #Winter13, #Winter14, #Spring13, #Spring14, #Summer13, #Summer14, #sortable2, #sortable3, #sortable4" ).sortable({#}
-                connectWith: ".connectedSortable",
-                dropOnEmpty: true
-
-            }).disableSelection();
-
-
-
-
-        });
         var initialclassload;
         $(document).on('click', ".courseRemove", function(){
                 objA = $(this).parent();
@@ -169,6 +181,18 @@
                 }
 
             });
+            $(function() {
+                $(".connectedSortable" ).sortable({
+
+                    {#                            $( "#Fall12, #Fall13, #Winter13, #Winter14, #Spring13, #Spring14, #Summer13, #Summer14, #sortable2, #sortable3, #sortable4" ).sortable({#}
+                    connectWith: ".connectedSortable",
+                    dropOnEmpty: true
+
+                }).disableSelection();
+
+            });
+
+            $( ".connectedSortable" ).sortable( "option", "dropOnEmpty", true );
             $("#extrabutton").click(function () {
                 $("#extras").toggle('show');
                 return false;
@@ -747,16 +771,21 @@
                                         <tbody>
                                         <tr>{% for quarter, classes in quarters %}
                                             <td>
-                                                <ul id="{{ quarter }}" class="connectedSortable">
+                                                <ul id="{{ quarter }}" class="connectedSortable droptrue zlist">
+
                                                     {% for class in classes %}
 
-                                                    <li></li>
+
                                                     <li class="ui-state-default">
                                                         <div class="classHeader">{{ class }} <span class="classUnits badge badge-success">1</span><br></div>
                                                         <div class="classInstructor">Instructor Name<br></div>
                                                         <div class="classTime">MWF 12-2pm<br></div>
                                                     </li>
+
                                                     {% endfor %}
+                                                    <li class="ui-state-highlight2 ui-state-disabled">
+                                                        <p> </p>
+                                                    </li>
                                                 </ul>
                                             </td>
                                             {% endfor %}
