--- a/UCSC_Course_Planner/templates/contact.html
+++ b/UCSC_Course_Planner/templates/contact.html
@@ -78,10 +78,10 @@
 <ul class="thumbnails">
         <li class = "span3">
             <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/django2.jpg">
+                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/jrowley.jpg">
                 <div class="caption">
-                    <h3>Django Dog</h3>
-                    <p>The largest contributer to the site.</p>
+                    <h3>Joe Rowley</h3>
+                    <p>Baddest Mofo Around</p>
                     <p>
                         <a href="#"class="btn btn-primary">Email</a>
                         <a href="http://github.com"class="btn btn-primary">Github</a>
