--- a/UCSC_Course_Planner/templates/selectmajor.html
+++ b/UCSC_Course_Planner/templates/selectmajor.html
@@ -261,7 +261,7 @@
                             <button id="removeButton1" class="btn" style="display: none"><i class="icon-minus-sign icon-blacks"></i> Remove Major </button>
                             <a id="cloneButton1" id="popme" class="btn" data-toggle="popover" data-placement="right" data-content=
                                     "Did you know that for every additional major you are required to take an additional 40 units of upper divs?"
-                               title="" data-original-title="Hold on a sec ambitious one..."><i class="icon-plus-sign icon-blacks"></i> Add Major </a>
+                               title="" data-original-title="Hold on a sec ambitious one..."><i class="icon-plus-sign icon-blacks"></i> Add a Second Major </a>
 
                         </form>
 
@@ -283,7 +283,7 @@
                                 <option>Eletrical Engineering BS</option>
                             </select>
                             <div class="btn-group">
-                                <button id="cloneButton2" class="btn"><i class="icon-plus-sign icon-blacks"></i> Add Major </button>
+                                <button id="cloneButton2" class="btn"><i class="icon-plus-sign icon-blacks"></i> Add a Third Major </button>
                                 <button id="removeButton2" class="btn"><i class="icon-minus-sign icon-blacks"></i> Remove Major </button>
                             </div>
 
@@ -335,7 +335,7 @@
                             <button id="removeMinorButton1" class="btn" style="display: none"><i class="icon-minus-sign icon-blacks"></i> Remove Minor </button>
                             <a id="cloneMinorButton1" id="popme" class="btn" data-toggle="popover" data-placement="right" data-content=
                                     "Did you know that for every additional minor you are required to take an additional 25 units of upper divs? Also, this is menu is disabled right now because we are still implementing this function."
-                               title="" data-original-title="FYI..." ><i class="icon-plus-sign icon-blacks"></i> Add Minor</a>
+                               title="" data-original-title="FYI..." ><i class="icon-plus-sign icon-blacks"></i> Add a Second Minor</a>
 
                         </form>
 
